:sparkles: Creando el Header y la navegacion principal

--- a/views/layouts/index.pug
+++ b/views/layouts/index.pug
@@ -11,5 +11,6 @@ html(lang="en")
         link(rel="stylesheet", href="/css/bootstrap.css")
         link(rel="stylesheet", href="/css/style.css")
     body
-        h1 Agencia de Tours
+        include header
         block contenido
+        include footer
