--- a/views/layouts/header.pug
+++ b/views/layouts/header.pug
@@ -1,7 +1,7 @@
 header
     .navegacion
         .container
-            .row.justify-content-center.justify-content-md-between.aling-items-center.py-4
+            .row.justify-content-center.justify-content-md-between.align-items-center.py-4
                 .col-md-4.col-6
                     a(href="/") 
                         img(src="/img/logo.svg", alt="logo")
