--- a/views/layouts/footer.pug
+++ b/views/layouts/footer.pug
@@ -7,4 +7,5 @@ footer.container.py-5
                 a.nav-link(href="/testimoniales") Testimoniales
         .col
             p.copyright.text-center.text-md-right
-                | Todos los Derechos Reservados
+                | Todos los Derechos Reservados 
+                span= nowYear
