--- a/views/nosotros.pug
+++ b/views/nosotros.pug
@@ -1,5 +1,6 @@
 extends ./layouts/index
 
 block contenido
-    p Desde Nosotros
-    img(src="img/cupon.jpg")
+    main.container.mt-5 
+        .row 
+            h1= pagina
