--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,6 +6,10 @@
     font-family: 'Open Sans', sans-serif;
 }
 
+html {
+    font-size: 62.5%;
+}
+
 body {
     font-family: 'Open Sans', sans-serif;
 }
@@ -18,23 +22,23 @@ h3 {
 }
 
 h1 {
-    font-size: 3.4rem;
+    font-size: 5.44rem;
 }
 
 h2 {
-    font-size: 2.4rem;
+    font-size: 3.84rem;
 }
 
 h3 {
-    font-size: 3rem;
+    font-size: 4.8rem;
 }
 
 .btn-success {
     background-color: #DC135F;
     border-color: #DC135F;
-    padding: .8rem 0;
+    padding: 1.28rem 0;
     text-transform: uppercase;
-    border-radius: .8rem;
+    border-radius: 1.28rem;
 }
 
 .btn-success:hover {
@@ -60,7 +64,7 @@ h3 {
 
 .slider em {
     font-family: 'Covered By Your Grace', cursive;
-    font-size: 4rem;
+    font-size: 6.4rem;
     order: -1;
     line-height: .8;
     color: rgba(255, 255, 255, .5);
@@ -68,7 +72,7 @@ h3 {
 
 @media (min-width:768px) {
     .slider em {
-        font-size: 8rem;
+        font-size: 12.8rem;
     }
 }
 
@@ -89,12 +93,13 @@ h3 {
 }
 
 blockquote {
+    font-size: 1.7rem;
     font-weight: bold;
     line-height: 2;
 }
 
 p {
-    font-size: 1.2rem;
+    font-size: 1.7rem;
     line-height: 2;
 }
 
@@ -104,14 +109,14 @@ p {
 
 header .nav a {
     font-family: 'Staatliches', cursive;
-    font-size: 2rem;
+    font-size: 3.2rem;
     color: white;
 }
 
 footer .nav a,
 .copyright {
     font-family: 'Staatliches', cursive;
-    font-size: 1.6rem;
+    font-size: 2.56rem;
     color: black;
 }
 
@@ -156,25 +161,25 @@ footer .nav a,
 }
 
 .descuento .titulo {
-    font-size: 2.4rem;
+    font-size: 3.84rem;
 }
 
 .descuento .precio {
     color: #15B9D5;
-    font-size: 3rem;
+    font-size: 4.8rem;
 }
 
 .proximos-viajes p {
-    font-size: .9rem;
+    font-size: 1.44rem;
 }
 
 i {
     color: #DC135F;
-    font-size: 2rem;
+    font-size: 3.2rem;
 }
 
 .testimoniales p {
-    font-size: .8rem;
+    font-size: 12.8rem;
     font-weight: normal;
 }
 
@@ -187,12 +192,12 @@ i {
     width: 40px;
     height: 40px;
     display: block;
-    margin-bottom: 1rem;
+    margin-bottom: 1.6rem;
 }
 
 .blockquote-footer {
     text-align: right;
     color: #DC135F;
     font-weight: bold;
-    margin-top: 1rem;
+    margin-top: 1.6rem;
 }
