:sparkles: Se crea la vista viajes y se consume la informacion de la base de datos

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -39,6 +39,7 @@ h3 {
     padding: 1.28rem 0;
     text-transform: uppercase;
     border-radius: 1.28rem;
+    font-size: 1.4rem;
 }
 
 .btn-success:hover {
