:sparkles: Se crea la vista para la informacion de cada viaje

--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -3,4 +3,5 @@ extends ./layouts/index
 block contenido
     main.container.mt-5 
         .row 
-            h1= pagina
+            h1.text-center.mt-5 #{pagina}
+            .row
