--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -2,6 +2,20 @@ extends ./layouts/index
 
 block contenido
     main.container.mt-5 
-        .row 
-            h1.text-center.mt-5 #{pagina}
-            .row
+        h1.text-center.mt-5 #{pagina}
+        .row
+            h2.d-block.w-100.text-center Agrega un Testimonial
+
+            .row.justify-content-center.col
+                .col-md-8 
+                    form(action="" method="POST")
+                        .form-group 
+                            label(for="nombre") Nombre 
+                            input#nombre(type="text", placeholder="Tu nombre", name="nombre", class="input form-control")
+                        .form-group 
+                            label(for="correo") Correo Electronico
+                            input#correo(type="email", placeholder="Tu correo", name="correo", class="input form-control")
+                        .form-group 
+                            label(for="mensaje") Mensaje
+                            textarea#mensaje(name="mensaje", class="area form-control", placeholder="mensaje", rows=3) 
+                        input.btn.btn-success.btn-block(type="submit")
