--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -3,7 +3,7 @@ extends ./layouts/index
 block contenido
     main.container.mt-5 
         h1.text-center.mt-5 #{pagina}
-        .row
+        .row.justify-content-center
             .col-md-12
                 h2.d-block.w-100.text-center Agrega un Testimonial
 
