--- a/views/testimoniales.pug
+++ b/views/testimoniales.pug
@@ -3,8 +3,20 @@ extends ./layouts/index
 block contenido
     main.container.mt-5 
         h1.text-center.mt-5 #{pagina}
+        blockquote.text-center Lee sobre nuestros clientes y sus experiencias
+        
+        .row.testimoniales 
+            
+            each testimonial in testimoniales 
+                .col-md-6.col-lg-4.mb-4 
+                    .card
+                        .card-body 
+                            blockquote.blockquote
+                            p.mb-0 
+                                | #{testimonial.mensaje}
+                            footer.blockquote-footer
+                                | #{testimonial.nombre}
 
-        p= JSON.stringify(testimoniales)
 
         .row.justify-content-center
             .col-md-12
