--- a/views/inicio.pug
+++ b/views/inicio.pug
@@ -14,4 +14,19 @@ block contenido
                 p Praesent convallis, turpis a fringilla luctus, mi lacus mollis dolor, et faucibus sapien erat in purus. Cras lacinia lectus ligula, quis volutpat mauris dapibus gravida. Fusce consequat magna eget lacinia tristique. Fusce suscipit est a felis congue convallis. Cras sodales velit nec pharetra luctus.
             .col-md-6 
                 img(src="/img/inicio_nosotros.jpg", alt="Sobre nosotros", class="img-fluid")
+        
         include ./layouts/bloque_viajes
+
+    .descuento 
+        .container 
+            .row 
+                .col-md-6
+                    .contenido
+                        h3 5% de Descuento 
+                        p.titulo Viaje a Canada 
+                        p.fecha 20 de Marzo de 2022 - 28 de Marzo de 2022
+                        p.precio $2500 Dolares
+
+    .container
+        h2.mt-5.text-center Testimoniales
+        include ./layouts/bloque_testimonios
